# pp_voice_agent

./: .gitignore  50-clean-mic-default.conf  asound.state.working  convo_kg_bench.py  denoise_stream.c  fix-audio.sh  install.sh  keywords.txt  pipeline.py  pp-denoise-default.service  pp-denoise.service  pp-llm.service  pp-tts.service  pyproject.toml  tts-client.sh  tts-server.py  wake.py
audio/: asound.state.working  fix-audio.sh
denoise/: Makefile  denoise_source.c  denoise_stream.c
kws/: keywords_raw.txt
services/: pp-denoise.service  pp-llm.service  pp-tts.service
