[project]
name = "pp-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sherpa-onnx",
    "sherpa-onnx-core",
    "sherpa-onnx-bin",
    "sounddevice>=0.5.5",
    "click>=8.3.1",
    "sentencepiece>=0.2.1",
    "pypinyin>=0.55.0",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.4",
    "transformers>=5.3.0",
]

[[tool.uv.index]]
name = "sherpa-onnx-cpu"
url = "https://k2-fsa.github.io/sherpa/onnx/cpu.html"
format = "flat"
