[project]
name = "pp-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sherpa-onnx>=1.12.34",
    "sherpa-onnx-core",
    "sherpa-onnx-bin",
    "sounddevice>=0.5.5",
    "click>=8.3.1",
    "sentencepiece>=0.2.1",
    "pypinyin>=0.55.0",
    "numpy>=2.2.6",
    "onnxruntime>=1.24.4",
    "transformers>=4.56.1,<4.57.dev0",
    "soundfile>=0.13.1",
    "qdrant-edge-py>=0.6.1",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "phonemizer>=3.3.0",
    "torch>=2.11.0",
    "scikit-build-core>=0.12.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "sherpa-onnx-cpu"
url = "https://k2-fsa.github.io/sherpa/onnx/cpu.html"
format = "flat"
